Switching to use valueOf instead of new Long/etc.