@@ -46,7 +46,7 @@ public class PolicyInterceptorProviderRegistryImplTest extends Assert {
     @Before
     public void setUp() {
         control = EasyMock.createNiceControl();
-        new Integer(4);
+        Integer.valueOf(4);
     }
 
     @Test
