@@ -126,7 +126,7 @@ public class BookStoreSoapRestImpl implements BookStoreJaxrsJaxws {
 
     private void init() {
         Book book = new Book();
-        book.setId(new Long(123));
+        book.setId(Long.valueOf(123));
         book.setName("CXF in Action");
         books.put(book.getId(), book);
     }
